; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/serio/extr_serio.c_bind_mode_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/serio/extr_serio.c_bind_mode_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_driver = type { i32 }
%struct.serio_driver = type { i64 }

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"manual\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"auto\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device_driver*, i8*)* @bind_mode_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bind_mode_show(%struct.device_driver* %0, i8* %1) #0 {
  %3 = alloca %struct.device_driver*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.serio_driver*, align 8
  store %struct.device_driver* %0, %struct.device_driver** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.device_driver*, %struct.device_driver** %3, align 8
  %7 = call %struct.serio_driver* @to_serio_driver(%struct.device_driver* %6)
  store %struct.serio_driver* %7, %struct.serio_driver** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load %struct.serio_driver*, %struct.serio_driver** %5, align 8
  %10 = getelementptr inbounds %struct.serio_driver, %struct.serio_driver* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0)
  %15 = call i32 @sprintf(i8* %8, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %14)
  ret i32 %15
}

declare dso_local %struct.serio_driver* @to_serio_driver(%struct.device_driver*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
